/*
** EPITECH PROJECT, 2024
** B-OOP-400-TLS-4-1-tekspice-louis.huguet
** File description:
** AdvancedComponents
*/

#ifndef ADVANCEDCOMPONENTS_HPP_
#define ADVANCEDCOMPONENTS_HPP_

class AdvancedComponents {
    public:
        AdvancedComponents();
        ~AdvancedComponents();

    protected:
    private:
};

#endif /* !ADVANCEDCOMPONENTS_HPP_ */
