/*
** EPITECH PROJECT, 2024
** B-OOP-400-TLS-4-1-tekspice-louis.huguet
** File description:
** ElementaryComponents
*/

#ifndef ELEMENTARYCOMPONENTS_HPP_
#define ELEMENTARYCOMPONENTS_HPP_

#include "../AComponent.hpp"  

namespace nts
{ 
    class ElementaryComponents : public AComponent {
        public:
            ElementaryComponents() = default;
            ~ElementaryComponents() = default;

        protected:
        private:
    };
}

#endif /* !ELEMENTARYCOMPONENTS_HPP_ */
