/*
** EPITECH PROJECT, 2024
** B-OOP-400-TLS-4-1-tekspice-louis.huguet
** File description:
** SpecialComponents
*/

#ifndef SPECIALCOMPONENTS_HPP_
#define SPECIALCOMPONENTS_HPP_

#include "../AComponent.hpp"

class SpecialComponents : public nts::AComponent {
    public:
        SpecialComponents() = default;
        ~SpecialComponents() = default;

    protected:
    private:
};

#endif /* !SPECIALCOMPONENTS_HPP_ */
